--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <svg height="210" width="500">
-        <polygon points="200,10 295,200 100,200" style="fill:lime;stroke:purple;stroke-width:1" />
-      </svg>
-      
-</body>
+  </head>
+  <body style="background-color: yellow">
+    <svg width="300" height="200">
+      <circle cx="50%" cy="50%" r="80" fill="black"></circle>
+      <rect x="93.75" y="43.75" width="112.5" height="112.5" fill="limegreen" />
+      <polygon points="150, 43.75 206.25, 156.15 93.75, 156.15" fill="black" />
+      <ellipse cx="50%" cy="35%" rx="10" ry="6" fill="white" />
+      <circle cx="50%" cy="35%" r="5" fill="black"></circle>
+      <circle cx="50%" cy="35%" r="1.5" fill="white"></circle>
+      <text x="150" y="125" font-size="60" text-anchor="middle" fill="white">
+        TPD
+      </text>
+    </svg>
+  </body>
 </html>
